shop-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: shop-back
  name: shop-back
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shop-back  
  strategy:
  template:
    metadata:
      labels:
        io.kompose.service: shop-back
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: cloudbreak6th/shop-back:v1.0
          name: shop-back
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: shop-back
  name: shop-back
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: shop-back
