shop-back-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-type: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /shopback
            pathType: Prefix
            backend:
              service:
                name: shop-back
                port:
                  number: 8080
