webbackup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shop-front
  template:
    metadata:
      labels:
        io.kompose.service: shop-front 
    spec:
      containers:
        - image: cloudbreak6th/shop-front:v1.0
          name: shop-front
          ports:
            - containerPort: 80 
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: shop-front 
spec:
  ports:
    - name: "80"
    - port: 80 
      targetPort: 80
  selector:
    io.kompose.service: shop-front 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-front-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: shop-front
              port:
                number: 80
